--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 praw==6.3.1
 prawcore==1.0.1
+redis==3.3.11
 requests==2.22.0
+rq==1.1.0
 six==1.12.0
 SQLAlchemy==1.3.6
 update-checker==0.16
