--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 praw==6.3.1
 prawcore==1.0.1
+psycopg2-binary==2.8.4
 redis==3.3.11
 requests==2.22.0
 rq==1.1.0
